--- a/news-alert.html
+++ b/news-alert.html
@@ -19,8 +19,8 @@
                 <div class="body">
                     <div class="header">
                         <div class="header__logos">
-                            <img class="header__logos__riskline" src="./src/assets/images/logo-icon.png">
                             <img class="header__logos__country" src="./src/assets/images/Flag-India.jpg">
+                            <img class="header__logos__riskline" src="./src/assets/images/logo-icon.png">
                         </div>
                         <div class="header__sub">
                             <h1 class="header__sub__countryName">Brazil</h1>
@@ -74,14 +74,30 @@
                         </section>
                     </section>
 
-                    <div class="alert-content">
-                        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis iure sed qui.
-                            Repellendus dolorum nam
-                            expedita doloribus molestiae voluptatibus eos veritatis quibusdam laborum? Assumenda ab
+                    <div class="alert-content-1">
+                        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt ratione
+                            obcaecati voluptas
+                            dolorum suscipit ex necessitatibus labore, ab sint eaque unde doloremque ipsum distinctio
+                            deleniti asperiores ipsa illum! Dolorum, commodi.</p>
+
+                        <div class="alert-content-1__dates">
+                            <h6>Effective dates</h6>
+                            <p>Now: <strong><time>17 Jul 2022</time></strong> until <strong><time>18 Jul
+                                        2022</time></strong></p>
+                        </div>
+
+                        <div class="alert-content-1__dates">
+                            <h6>Impact areas</h6>
+
+                            <p>England (GB), Wales (GB)</p>
+
+                        </div>
+                    </div>
+                    <div class="alert-content-2">
+                        <h5 class="advice-title">Advice</h5>
+                        <p class="content">Follow all offical directives eos veritatis quibusdam laborum? Assumenda ab
                             laborum
                             laboriosam beatae aspernatur quos? Placeat quod corrupti animi quam id?</p>
-                        <h5 class="advice-title">Advice</h5>
-                        <p class="content">Follow all offical directives</p>
                     </div>
 
                 </div>
