--- a/country-risk-level-update.html
+++ b/country-risk-level-update.html
@@ -44,7 +44,7 @@
                         &#9660;
                     </div>
                     <div class="riskLevelCountry__new">
-                        <span class="new-tag">New</span>
+                        <span class="new-tag">NEW</span>
                         <h4 class="riskLevelCountry__new__title">Security Risk Level</h4>
                         <div class="riskLevelCountry__new__levels">
                             <!---->
