--- a/index.html
+++ b/index.html
@@ -41,15 +41,9 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
                                     <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="5"></div>
                                     <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
@@ -84,15 +78,9 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
                                     <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="5"></div>
                                     <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
@@ -126,15 +114,9 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
                                     <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="5"></div>
                                     <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
@@ -169,15 +151,45 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
                                     <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="4"></div>
                                     <div class="riskLevel__levels__item" alert-type="4"></div>
                                     <div class="riskLevel__levels__item" alert-type="5"></div>
+                                </div>
+                                </span>
+                            </div>
+                        </div>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque optio
+                            laboriosam
+                            nulla cumque
+                            dolor libero at suscipit sed omnis, itaque ducimus, repellendus ut laborum est beatae
+                            eligendi voluptates quae blanditiis! Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Inventore perspiciatis mollitia ipsam? Animi, ipsam tempore nihil exercitationem
+                            fugiat earum dicta perferendis sapiente accusantium facere dolores assumenda voluptatem
+                            corporis veritatis eaque?</p>
+                </article>
+
+                <article class="dailyBrief__category__item">
+                    <header class="dailyBrief__category__item__header">
+                        <img class="flag" src="./src/assets/images/Flag-India.jpg" />
+                        <h6 class="title">India</h6>
+                    </header>
+                    <div class="dailyBrief__category__item__body">
+                        <h3 class="title">Distruptions likely near Muslim targets nationwide on 3 May for Eid al-fitr
+                        </h3>
+                        <div class="riskLevel">
+                            <div class="wrap">
+                                <div class="title">Risk Level</div>
+                                <div class="riskLevel__levels">
+                                    <!---->
+                                    <!---->
+                                    <!--@Todo please loop over two items below and then  pass the risklevel  value of alert type -->
+                                    <!---->
+                                    <!---->
+                                    <div class="riskLevel__levels__item" alert-type="1"></div>
+                                    <div class="riskLevel__levels__item" alert-type="2"></div>
+                                    <div class="riskLevel__levels__item" alert-type="3"></div>
+                                    <div class="riskLevel__levels__item" alert-type="4"></div>
                                     <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
@@ -211,16 +223,10 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
+                                    <div class="riskLevel__levels__item" alert-type="3"></div>
+                                    <div class="riskLevel__levels__item" alert-type="4"></div>
+                                    <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
                             </div>
@@ -253,58 +259,10 @@
                                     <!---->
                                     <!---->
                                     <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
                                     <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
                                     <div class="riskLevel__levels__item" alert-type="3"></div>
                                     <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type="4"></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                </div>
-                                </span>
-                            </div>
-                        </div>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque optio
-                            laboriosam
-                            nulla cumque
-                            dolor libero at suscipit sed omnis, itaque ducimus, repellendus ut laborum est beatae
-                            eligendi voluptates quae blanditiis! Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Inventore perspiciatis mollitia ipsam? Animi, ipsam tempore nihil exercitationem
-                            fugiat earum dicta perferendis sapiente accusantium facere dolores assumenda voluptatem
-                            corporis veritatis eaque?</p>
-                </article>
-
-                <article class="dailyBrief__category__item">
-                    <header class="dailyBrief__category__item__header">
-                        <img class="flag" src="./src/assets/images/Flag-India.jpg" />
-                        <h6 class="title">India</h6>
-                    </header>
-                    <div class="dailyBrief__category__item__body">
-                        <h3 class="title">Distruptions likely near Muslim targets nationwide on 3 May for Eid al-fitr
-                        </h3>
-                        <div class="riskLevel">
-                            <div class="wrap">
-                                <div class="title">Risk Level</div>
-                                <div class="riskLevel__levels">
-                                    <!---->
-                                    <!---->
-                                    <!--@Todo please loop over two items below and then  pass the risklevel  value of alert type -->
-                                    <!---->
-                                    <!---->
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-                                    <div class="riskLevel__levels__item" alert-type="1"></div>
-
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type="2"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type="3"></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
-                                    <div class="riskLevel__levels__item" alert-type=""></div>
+                                    <div class="riskLevel__levels__item" alert-type="5"></div>
                                 </div>
                                 </span>
                             </div>
@@ -324,7 +282,7 @@
 
         <!--Start get started section-->
         <section class="getStartedContainer">
-            <p class="title">Learn more about Risk level inteligence</p>
+            <p class="title">Learn more about Risk Level intelligence</p>
             <button class="btn riskline-button">Get started</button>
         </section>
         <!--End Get started section-->
